[package]
name = "zkaf_jolt"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["guest", "tlsn-substrings-verifier"]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = [
    "host",
] }
guest = { path = "./guest" }
tlsn-substrings-verifier = { path = "./tlsn-substrings-verifier" }
p256 = { version = "0.13", features = ["ecdsa"] }
serde = "1.0"
serde_json = "1.0.107"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "6152883" }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }

[build-dependencies]
serde = "1.0"
serde_json = "1.0.107"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "6152883" }
p256 = { version = "0.13", features = ["ecdsa"] }
tlsn-substrings-verifier = { path = "./tlsn-substrings-verifier" }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
